--- a/w_report_projects/report/project_task_report.xml
+++ b/w_report_projects/report/project_task_report.xml
@@ -10,9 +10,9 @@
             <field name="orientation">Portrait</field>
             <field name="margin_top">25</field>
             <field name="margin_right">5</field>
-            <field name="margin_bottom">75</field>
+            <field name="margin_bottom">55</field>
             <field name="margin_left">5</field>
-            <field name="header_line" eval="True"/>
+            <field name="header_line" eval="False"/>
             <field name="header_spacing">20</field>
             <field name="dpi">90</field>
         </record>
@@ -23,11 +23,11 @@
             <field name="page_width">0</field>
             <field name="page_width">0</field>
             <field name="orientation">Portrait</field>
-            <field name="margin_top">20</field>
+            <field name="margin_top">25</field>
             <field name="margin_right">5</field>
-            <field name="margin_bottom">80</field>
+            <field name="margin_bottom">55</field>
             <field name="margin_left">5</field>
-            <field name="header_line" eval="True"/>
+            <field name="header_line" eval="False"/>
             <field name="header_spacing">20</field>
             <field name="dpi">90</field>
         </record>
@@ -38,11 +38,11 @@
             <field name="page_width">0</field>
             <field name="page_width">0</field>
             <field name="orientation">Portrait</field>
-            <field name="margin_top">30</field>
+            <field name="margin_top">25</field>
             <field name="margin_right">5</field>
-            <field name="margin_bottom">70</field>
+            <field name="margin_bottom">55</field>
             <field name="margin_left">5</field>
-            <field name="header_line" eval="True"/>
+            <field name="header_line" eval="False"/>
             <field name="header_spacing">20</field>
             <field name="dpi">90</field>
         </record>
