--- a/w_purchase_order_reports/reports/inherit_purchase_report.xml
+++ b/w_purchase_order_reports/reports/inherit_purchase_report.xml
@@ -98,7 +98,10 @@
             </div>
         </div>
         <div class="article o_report_layout_standard"  t-att-data-oe-model="o and o._name" t-att-data-oe-id="o and o.id" t-att-data-oe-lang="o and o.env.context.get('lang')">
-            <t t-raw="0"/>
+            <!-- <t t-raw="0"/> -->
+        
+            <t t-out="0"/>
+
         </div>
         <div class="footer o_standard_footer">
             <div class="row">
