--- a/w_service_order_reports/report/service_order_multi_report.xml
+++ b/w_service_order_reports/report/service_order_multi_report.xml
@@ -1,14 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
     <data>
-        <report id="w_order_service_multi"
+        <!-- <report id="w_order_service_multi"
             string="Multi - Order Services"
             model="project.task"
             report_type="qweb-pdf"
             name="w_service_order_reports.w_order_service_multi_report"
             file="w_service_order_reports.w_order_service_multi_report"
             paperformat="w_report_projects.paper_format_report_service_order"
-        />
+        /> -->
+
+
+        <record id="w_order_service_multi" model="ir.actions.report">
+        <field name="name">Multi - Order Services</field>
+        <field name="model">project.task</field>
+        <field name="report_type">qweb-pdf</field>
+        <field name="report_name">w_service_order_reports.w_order_service_multi_report</field>
+        <field name="report_file">w_service_order_reports.w_order_service_multi_report</field>
+        <field name="print_report_name">'Muti Oreden - %s' % (object.name or 'Attendee').replace('/','')</field>
+        <field name="paperformat_id" ref="w_report_projects.paper_format_report_service_order"/>
+        <field name="binding_model_id" ref="model_project_task"/>
+        <field name="binding_type">report</field>
+        </record>
+
+
     </data>
 </odoo>
 
